Closed Bug 1659183 Opened 6 years ago Closed 5 years ago

Intermittent [Fission] dom/base/test/test_window_close.html | Test timed out.

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
Fission Milestone M6c

People

(Reporter: intermittent-bug-filer, Assigned: peterv)

References

(Blocks 1 open bug)

Details

(Keywords: intermittent-failure)

Attachments

(2 files)

Filed by: apavel [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=313034461&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/RhZcjmxXQBSPsD1jhqpU5g/runs/0/artifacts/public/logs/live_backing.log


[task 2020-08-14T16:16:57.282Z] 16:16:57 INFO - 1114 INFO TEST-OK | dom/base/test/test_webaudioNotificationStopOnNavigation.html | took 289ms
[task 2020-08-14T16:16:57.283Z] 16:16:57 INFO - 1115 INFO TEST-START | dom/base/test/test_window_close.html
[task 2020-08-14T16:16:57.539Z] 16:16:57 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:57.640Z] 16:16:57 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:57.715Z] 16:16:57 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:58.038Z] 16:16:58 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:58.139Z] 16:16:58 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:58.215Z] 16:16:58 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:58.538Z] 16:16:58 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:58.639Z] 16:16:58 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:58.715Z] 16:16:58 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:59.037Z] 16:16:59 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:59.139Z] 16:16:59 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:59.215Z] 16:16:59 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:59.538Z] 16:16:59 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:59.640Z] 16:16:59 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:16:59.715Z] 16:16:59 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:17:00.037Z] 16:17:00 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:17:00.141Z] 16:17:00 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:17:00.217Z] 16:17:00 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:17:00.540Z] 16:17:00 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:

[task 2020-08-14T16:22:23.834Z] 16:22:23 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:23.935Z] 16:22:23 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:23.996Z] 16:22:23 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:24.334Z] 16:22:24 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:24.340Z] 16:22:24 INFO - Buffered messages logged at 16:16:53
[task 2020-08-14T16:22:24.341Z] 16:22:24 INFO - 1116 INFO TEST-PASS | dom/base/test/test_window_close.html | Expected close on withouthistory: true
[task 2020-08-14T16:22:24.341Z] 16:22:24 INFO - Buffered messages finished
[task 2020-08-14T16:22:24.342Z] 16:22:24 WARNING - 1117 INFO TEST-UNEXPECTED-FAIL | dom/base/test/test_window_close.html | Test timed out.
[task 2020-08-14T16:22:24.342Z] 16:22:24 INFO - SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
[task 2020-08-14T16:22:24.342Z] 16:22:24 INFO - reportError@SimpleTest/TestRunner.js:143:22
[task 2020-08-14T16:22:24.343Z] 16:22:24 INFO - TestRunner._checkForHangs@SimpleTest/TestRunner.js:165:18
[task 2020-08-14T16:22:24.343Z] 16:22:24 INFO - 1118 INFO TEST-OK | dom/base/test/test_window_close.html | took 325095ms

[task 2020-08-14T16:22:55.363Z] 16:22:55 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:55.459Z] 16:22:55 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:55.523Z] 16:22:55 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:55.861Z] 16:22:55 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:55.898Z] 16:22:55 WARNING - 1119 INFO TEST-UNEXPECTED-FAIL | dom/base/test/test_window_close.html | Test timed out.
[task 2020-08-14T16:22:55.899Z] 16:22:55 INFO - SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
[task 2020-08-14T16:22:55.899Z] 16:22:55 INFO - reportError@SimpleTest/TestRunner.js:143:22
[task 2020-08-14T16:22:55.899Z] 16:22:55 INFO - TestRunner._checkForHangs@SimpleTest/TestRunner.js:165:18
[task 2020-08-14T16:22:55.900Z] 16:22:55 WARNING - 1120 ERROR TEST-UNEXPECTED-FAIL | SimpleTest | this test already called finish!
[task 2020-08-14T16:22:55.900Z] 16:22:55 WARNING - 1121 INFO TEST-UNEXPECTED-ERROR | dom/base/test/test_window_close.html | called finish() multiple times
[task 2020-08-14T16:22:55.900Z] 16:22:55 INFO - TEST-INFO
[task 2020-08-14T16:22:55.962Z] 16:22:55 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:56.023Z] 16:22:56 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:56.361Z] 16:22:56 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:56.462Z] 16:22:56 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:
[task 2020-08-14T16:22:56.523Z] 16:22:56 INFO - JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-77.0a1.en-US.linux-x86_64/components/httpd.js, line 3824: NS_ERROR_NOT_AVAILABLE:

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---

Update:

There have been 110 failures within the last 7 days:

  • 65 failures on Linux 18.04 x64 WebRender debug
  • 31 failures on Linux 18.04 x64 shippable opt
  • 14 failures on Windows 10 x64 Shippable opt

Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=318244998&repo=autoland&lineNumber=22865

Simon, could these failures somehow be related to Bug 1666219 ?

Flags: needinfo?(sgiesecke)

Hm, the immediate locations mentioned in the frequent warnings here were changed by https://searchfox.org/mozilla-central/commit/c606d3c77658728b778405ca06dc75af8236f400 of Bug 1664770. But AFAIU, they didn't change the behaviour.

Another change around here is https://searchfox.org/mozilla-central/commit/75112e975aa31e7bfd90ba80dab4c1304dfcb201 from Bug 1661711.

But both these changes were done quite some time before this issue started increasing frequency on 2020-10-02. (Is that the right day?)

:nataliaCs What lead you to the assumption it was one of the patches of Bug 1666219 that caused this? The changes are rather mechanical, so it's rather unlikely that they caused this. But there might have been a mistake in the mechanical changes of course. However, I couldn't find one now.

I also noticed that all of the recent failure seem to be with fission enabled. Interestingly, on the same day a patch landed that disabled several DOM tests with fission enabled, but not this one: https://hg.mozilla.org/integration/autoland/rev/6b89ff1b983e3f136ada5248ed47e8632bf1df1c Might there be a common root cause of these failures?

Flags: needinfo?(sgiesecke)

I noticed some QuotaManager warning within the recent log, so I figured it could probably be it.
Thank you for looking into this, will ni Olli for an input.

Flags: needinfo?(bugs)
Assignee: nobody → aryx.bugmail
Keywords: leave-open
Summary: Intermittent dom/base/test/test_window_close.html | Test timed out. → Intermittent [Fission] dom/base/test/test_window_close.html | Test timed out.
Pushed by archaeopteryx@coole-files.de: https://hg.mozilla.org/integration/autoland/rev/20d0b643ee0c disable dom/base/test/test_window_close.html with fission disabled for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD

M6c

Assigning to Peter because this is probably related to Fission session history.

Assignee: aryx.bugmail → peterv
Severity: normal → S3
Fission Milestone: --- → M6c
Priority: -- → P3

kmag's message in chat:
It looks like when this fails, we get here with history.length == 2, then we load file_window_close_2.html, go back, still have history.length == 2 and then repeat until we get an error for setting location too quickly.

Flags: needinfo?(bugs)

This is tracked in SHIP failures.

Whiteboard: [stockwell disable-recommended] → [stockwell disabled]
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/68ae654aa40f Don't temporarily increment length of session history if we're just adding a child entry for an initial load. r=smaug
Status: REOPENED → RESOLVED
Closed: 5 years ago5 years ago
Keywords: leave-open
Resolution: --- → FIXED
Whiteboard: [stockwell disabled]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: