Bug 1659183 - Don't temporarily increment length of session history if we're just adding a child entry for an initial load. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D94976